# aniray

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp.yaml
examples/aniray-cinder-basic/: .gitignore  CMakeLists.txt
examples/aniray-cinder-basic/assets/: leds.csv
examples/aniray-cinder-basic/src/: RotationAnimation.cpp  main.cpp
include/aniray/: DMXAddr.hpp  Geometry.hpp  IOInterface.hpp  IOInterfaceModbus.hpp  InputInterface.hpp  Node.hpp  NodeAnimation.hpp  NodeArray.hpp  NodeArrayOutput.hpp  NodeArrayOutputOLA.hpp  NodeArraySampler.hpp  Nodes.hpp  NodesOutput.hpp  NodesOutputOLA.hpp  NodesSampler.hpp  PeriodicThread.hpp
include/ledpixel/: DMXAddr.hpp  Geometry.hpp  LEDPixel.hpp  LEDPixelAnimation.hpp  LEDPixels.hpp  LEDPixelsOutput.hpp  LEDPixelsOutputOLA.hpp  LEDPixelsSampler.hpp  old.hpp
lib/: boost-1.75-all.imp
src/: DMXAddr.cpp  IOInterface.cpp  IOInterfaceModbus.cpp  InputInterface.cpp  LEDPixel.cpp  NodeArrayOutputOLA.cpp  PeriodicThread.cpp  lintHelper.cpp
src/lintHelpers/: Geometry.cpp  IOInterfaceModbus.cpp  LEDPixel.cpp  LEDPixelAnimation.cpp  LEDPixels.cpp  LEDPixelsOutput.cpp  LEDPixelsOutputOLA.cpp  LEDPixelsSampler.cpp  Node.cpp  NodeAnimation.cpp  NodeArray.cpp  NodeArrayOutput.cpp  NodeArrayOutputOLA.cpp  NodeArraySampler.cpp  Nodes.cpp  NodesOutput.cpp  NodesOutputOLA.cpp  NodesSampler.cpp
